central-server/admin-service.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-service
  labels:
    app: xroad-centralserver-admin-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: xroad-centralserver-admin-service
  template:
    metadata:
      labels:
        app: xroad-centralserver-admin-service
    spec:
      containers:
        - name: admin-service
          image: ghcr.io/digitaltelangana/pravahini:latest
          command: 
             - "/usr/share/xroad/bin/xroad-centralserver-admin-service"
          ports:
            - containerPort: 4000
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
          securityContext:
            runAsUser: 1100  
            runAsGroup: 1100
          volumeMounts:
            - name: xroad-config-volume
              mountPath: /etc/xroad.properties
              subPath: xroad.properties
            - name: xroad-config-volume
              mountPath: /etc/xroad/services/local.properties
              subPath: local.properties
            - name: xroad-config-volume
              mountPath: /etc/xroad/db.properties
              subPath: db.properties
            - name: xroad-config-volume
              mountPath: /etc/xroad/ssl.properties
              subPath: ssl.properties
            - name: xroad-ssl-cert-volume
              mountPath: /etc/xroad/ssl/center-admin-service.jks
              subPath: keystore.jks
              readOnly: true
            - name: xroad-ssl-cert-volume
              mountPath: /etc/xroad/ssl/truststore.jks
              subPath: truststore.jks
              readOnly: true
      volumes:
        - name: xroad-config-volume
          configMap:
            name: xroad-config
        - name: xroad-ssl-cert-volume
          secret:
            secretName: admin-xroad-ssl-cert
---
apiVersion: v1
kind: Service
metadata:
  name: centralserver-admin
spec:
  selector:
    app: xroad-centralserver-admin-service
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
