central-server/management-service.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: management-service
  labels:
    app: xroad-centralserver-management-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: xroad-centralserver-management-service
  template:
    metadata:
      labels:
        app: xroad-centralserver-management-service
    spec:
      containers:
        - name: xroad-centralserver-management-service
          image: ghcr.io/digitaltelangana/pravahini:latest
          command: ["/usr/share/xroad/bin/xroad-centralserver-management-service"]
          resources:
            limits:
              cpu: "250m"
              memory: "256Mi"
          ports:
            - containerPort: 8085
          securityContext:
            runAsUser: 1100  
            runAsGroup: 1100
          volumeMounts:
            - name: xroad-config-volume
              mountPath: /etc/xroad.properties
              subPath: xroad.properties
            - name: xroad-config-volume
              mountPath: /etc/xroad/db.properties
              subPath: db.properties
            - name: xroad-config-volume
              mountPath: /etc/xroad/ssl.properties
              subPath: ssl.properties
            - name: xroad-ssl-cert-volume
              mountPath: /etc/xroad/ssl/center-admin-service.p12
              subPath: keystore.p12
      volumes:
        - name: xroad-config-volume
          configMap:
            name: xroad-config 
        - name: xroad-ssl-cert-volume
          secret:
            secretName: xroad-ssl-cert    
---
apiVersion: v1
kind: Service
metadata:
  name: centralserver-management
spec:
  selector:
    app: xroad-centralserver-management-service
  ports:
    - protocol: TCP
      port: 8085
      targetPort: 8085
