central-server/proxy-ui-api.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy-ui-api
  labels:
    app: xroad-proxy-ui-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: xroad-proxy-ui-api
  template:
    metadata:
      labels:
        app: xroad-proxy-ui-api
    spec:
      containers:
        - name: xroad-proxy-ui-api
          image: ghcr.io/digitaltelangana/pravahini:latest
          command: ["/usr/share/xroad/bin/xroad-proxy-ui-api"]
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "250m"
              memory: "256Mi"
          securityContext:
            runAsUser: 1100  
            runAsGroup: 1100
          volumeMounts:
            - name: xroad-config-volume
              mountPath: /etc/xroad.properties
              subPath: xroad.properties
            - name: xroad-config-volume
              mountPath: /etc/xroad/db.properties
              subPath: db.properties
            - name: xroad-config-volume
              mountPath: /etc/xroad/ssl.properties
              subPath: ssl.properties
            - name: xroad-config-volume
              mountPath: /etc/xroad/ssl/proxy-ui-api.p12
              subPath: keystore.p12
            - name: xroad-config-volume
              mountPath: /etc/xroad/globalconf/instance-identifier
              subPath: instance-identifier
      volumes:
        - name: xroad-config-volume
          configMap:
            name: xroad-config
        - name: xroad-ssl-cert-volume
          secret:
            secretName: xroad-ssl-cert        
---
apiVersion: v1
kind: Service
metadata:
  name: proxy-ui-api
spec:
  selector:
    app: xroad-proxy-ui-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
